Implementação do menu de dados e settings e opção de alteração de idioma.

--- a/src/main/webapp/pages/menu.xhtml
+++ b/src/main/webapp/pages/menu.xhtml
@@ -9,6 +9,26 @@
 
 <body>
     <ui:composition>
+    	<div id="mainMenu">
+            <h:form>
+                <p:panelMenu>
+                    <p:submenu label="#{labels.menu_dataset}">
+                        <p:menuitem value="#{labels.menu_category}" url="/pages/category/list.faces"
+                                    icon="ui-icon-note" />
+                        <p:menuitem value="#{labels.menu_product}" url="/pages/product/list.faces"
+                                    icon="ui-icon-cart" />
+                        <p:menuitem value="#{labels.menu_user}" url="/pages/user/list.faces"
+                                    icon="ui-icon-person" />
+                    </p:submenu>
+                    <p:submenu label="#{labels.menu_settings}">
+                        <p:menuitem value="#{labels.menu_language}" url="/pages/settings/language.faces"
+                             ajax="false" icon="ui-icon-wrench" />
+                    </p:submenu>
+                </p:panelMenu>
+            </h:form>
+        </div>
+    
+    
     </ui:composition>
 </body>
 </html>
