--- a/src/main/webapp/pages/main.xhtml
+++ b/src/main/webapp/pages/main.xhtml
@@ -7,6 +7,7 @@
     xmlns:c="http://java.sun.com/jsp/jstl/core"
     xmlns:p="http://primefaces.org/ui">
     
+    <f:view locale="#{languageMB.localeCode}">
     <h:head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
         <meta http-equiv="Pragma" content="no-cache" />
@@ -38,4 +39,5 @@
             </p:layoutUnit>
         </p:layout>
     </h:body>
+    </f:view>
 </html>
