--- a/src/main/webapp/pages/menu.xhtml
+++ b/src/main/webapp/pages/menu.xhtml
@@ -21,9 +21,11 @@
                                     icon="ui-icon-person" />
                     </p:submenu>
                     <p:submenu label="#{labels.menu_settings}">
-                        <p:menuitem value="#{labels.menu_language}" url="/pages/settings/language.faces"
-                             ajax="false" icon="ui-icon-wrench" />
-                    </p:submenu>
+			            <p:menuitem value="#{labels.menu_language}" url="/pages/settings/language.faces"
+			             	ajax="false" icon="ui-icon-wrench" />
+			             <p:menuitem value="#{labels.logout}" url="/j_spring_security_logout"
+			             	ajax="false" icon="ui-icon-wrench" />
+			        </p:submenu>
                 </p:panelMenu>
             </h:form>
         </div>
